@@ -1,0 +1,324 @@
+# encoding: utf-8
+import datetime
+from south.db import db
+from south.v2 import SchemaMigration
+from django.db import models
+
+class Migration(SchemaMigration):
+
+    def forwards(self, orm):
+        
+        # Adding model 'Municipality'
+        db.create_table('lizard_krw_municipality', (
+            ('id', self.gf('django.db.models.fields.AutoField')(primary_key=True)),
+            ('name', self.gf('django.db.models.fields.CharField')(max_length=200)),
+        ))
+        db.send_create_signal('lizard_krw', ['Municipality'])
+
+        # Adding model 'Area'
+        db.create_table('lizard_krw_area', (
+            ('id', self.gf('django.db.models.fields.AutoField')(primary_key=True)),
+            ('name', self.gf('django.db.models.fields.CharField')(max_length=200)),
+        ))
+        db.send_create_signal('lizard_krw', ['Area'])
+
+        # Adding model 'Province'
+        db.create_table('lizard_krw_province', (
+            ('id', self.gf('django.db.models.fields.AutoField')(primary_key=True)),
+            ('name', self.gf('django.db.models.fields.CharField')(max_length=200)),
+        ))
+        db.send_create_signal('lizard_krw', ['Province'])
+
+        # Adding field 'WaterBody.status'
+        db.add_column('lizard_krw_waterbody', 'status', self.gf('django.db.models.fields.TextField')(null=True, blank=True), keep_default=False)
+
+        # Adding field 'WaterBody.protected_area_reason'
+        db.add_column('lizard_krw_waterbody', 'protected_area_reason', self.gf('django.db.models.fields.TextField')(null=True, blank=True), keep_default=False)
+
+        # Adding field 'WaterBody.code'
+        db.add_column('lizard_krw_waterbody', 'code', self.gf('django.db.models.fields.CharField')(max_length=80, null=True, blank=True), keep_default=False)
+
+        # Adding field 'WaterBody.characteristics'
+        db.add_column('lizard_krw_waterbody', 'characteristics', self.gf('django.db.models.fields.TextField')(null=True, blank=True), keep_default=False)
+
+        # Adding field 'WaterBody.current_situation_chemicals'
+        db.add_column('lizard_krw_waterbody', 'current_situation_chemicals', self.gf('django.db.models.fields.TextField')(null=True, blank=True), keep_default=False)
+
+        # Adding field 'WaterBody.control_parameters'
+        db.add_column('lizard_krw_waterbody', 'control_parameters', self.gf('django.db.models.fields.TextField')(null=True, blank=True), keep_default=False)
+
+        # Adding M2M table for field area on 'WaterBody'
+        db.create_table('lizard_krw_waterbody_area', (
+            ('id', models.AutoField(verbose_name='ID', primary_key=True, auto_created=True)),
+            ('waterbody', models.ForeignKey(orm['lizard_krw.waterbody'], null=False)),
+            ('area', models.ForeignKey(orm['lizard_krw.area'], null=False))
+        ))
+        db.create_unique('lizard_krw_waterbody_area', ['waterbody_id', 'area_id'])
+
+        # Adding M2M table for field province on 'WaterBody'
+        db.create_table('lizard_krw_waterbody_province', (
+            ('id', models.AutoField(verbose_name='ID', primary_key=True, auto_created=True)),
+            ('waterbody', models.ForeignKey(orm['lizard_krw.waterbody'], null=False)),
+            ('province', models.ForeignKey(orm['lizard_krw.province'], null=False))
+        ))
+        db.create_unique('lizard_krw_waterbody_province', ['waterbody_id', 'province_id'])
+
+        # Adding M2M table for field municipality on 'WaterBody'
+        db.create_table('lizard_krw_waterbody_municipality', (
+            ('id', models.AutoField(verbose_name='ID', primary_key=True, auto_created=True)),
+            ('waterbody', models.ForeignKey(orm['lizard_krw.waterbody'], null=False)),
+            ('municipality', models.ForeignKey(orm['lizard_krw.municipality'], null=False))
+        ))
+        db.create_unique('lizard_krw_waterbody_municipality', ['waterbody_id', 'municipality_id'])
+
+
+    def backwards(self, orm):
+        
+        # Deleting model 'Municipality'
+        db.delete_table('lizard_krw_municipality')
+
+        # Deleting model 'Area'
+        db.delete_table('lizard_krw_area')
+
+        # Deleting model 'Province'
+        db.delete_table('lizard_krw_province')
+
+        # Deleting field 'WaterBody.status'
+        db.delete_column('lizard_krw_waterbody', 'status')
+
+        # Deleting field 'WaterBody.protected_area_reason'
+        db.delete_column('lizard_krw_waterbody', 'protected_area_reason')
+
+        # Deleting field 'WaterBody.code'
+        db.delete_column('lizard_krw_waterbody', 'code')
+
+        # Deleting field 'WaterBody.characteristics'
+        db.delete_column('lizard_krw_waterbody', 'characteristics')
+
+        # Deleting field 'WaterBody.current_situation_chemicals'
+        db.delete_column('lizard_krw_waterbody', 'current_situation_chemicals')
+
+        # Deleting field 'WaterBody.control_parameters'
+        db.delete_column('lizard_krw_waterbody', 'control_parameters')
+
+        # Removing M2M table for field area on 'WaterBody'
+        db.delete_table('lizard_krw_waterbody_area')
+
+        # Removing M2M table for field province on 'WaterBody'
+        db.delete_table('lizard_krw_waterbody_province')
+
+        # Removing M2M table for field municipality on 'WaterBody'
+        db.delete_table('lizard_krw_waterbody_municipality')
+
+
+    models = {
+        'auth.group': {
+            'Meta': {'object_name': 'Group'},
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'unique': 'True', 'max_length': '80'}),
+            'permissions': ('django.db.models.fields.related.ManyToManyField', [], {'to': "orm['auth.Permission']", 'symmetrical': 'False', 'blank': 'True'})
+        },
+        'auth.permission': {
+            'Meta': {'ordering': "('content_type__app_label', 'content_type__model', 'codename')", 'unique_together': "(('content_type', 'codename'),)", 'object_name': 'Permission'},
+            'codename': ('django.db.models.fields.CharField', [], {'max_length': '100'}),
+            'content_type': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['contenttypes.ContentType']"}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '50'})
+        },
+        'auth.user': {
+            'Meta': {'object_name': 'User'},
+            'date_joined': ('django.db.models.fields.DateTimeField', [], {'default': 'datetime.datetime.now'}),
+            'email': ('django.db.models.fields.EmailField', [], {'max_length': '75', 'blank': 'True'}),
+            'first_name': ('django.db.models.fields.CharField', [], {'max_length': '30', 'blank': 'True'}),
+            'groups': ('django.db.models.fields.related.ManyToManyField', [], {'to': "orm['auth.Group']", 'symmetrical': 'False', 'blank': 'True'}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'is_active': ('django.db.models.fields.BooleanField', [], {'default': 'True'}),
+            'is_staff': ('django.db.models.fields.BooleanField', [], {'default': 'False'}),
+            'is_superuser': ('django.db.models.fields.BooleanField', [], {'default': 'False'}),
+            'last_login': ('django.db.models.fields.DateTimeField', [], {'default': 'datetime.datetime.now'}),
+            'last_name': ('django.db.models.fields.CharField', [], {'max_length': '30', 'blank': 'True'}),
+            'password': ('django.db.models.fields.CharField', [], {'max_length': '128'}),
+            'user_permissions': ('django.db.models.fields.related.ManyToManyField', [], {'to': "orm['auth.Permission']", 'symmetrical': 'False', 'blank': 'True'}),
+            'username': ('django.db.models.fields.CharField', [], {'unique': 'True', 'max_length': '30'})
+        },
+        'contenttypes.contenttype': {
+            'Meta': {'ordering': "('name',)", 'unique_together': "(('app_label', 'model'),)", 'object_name': 'ContentType', 'db_table': "'django_content_type'"},
+            'app_label': ('django.db.models.fields.CharField', [], {'max_length': '100'}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'model': ('django.db.models.fields.CharField', [], {'max_length': '100'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '100'})
+        },
+        'lizard_krw.alphascore': {
+            'Meta': {'ordering': "['-min_value']", 'object_name': 'AlphaScore'},
+            'color': ('lizard_map.models.ColorField', [], {'default': "'808080'", 'max_length': '8'}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'max_value': ('django.db.models.fields.FloatField', [], {'default': '1.0'}),
+            'min_value': ('django.db.models.fields.FloatField', [], {'default': '0.0'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '200'})
+        },
+        'lizard_krw.area': {
+            'Meta': {'object_name': 'Area'},
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '200'})
+        },
+        'lizard_krw.executive': {
+            'Meta': {'object_name': 'Executive'},
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '200'})
+        },
+        'lizard_krw.fundingorganization': {
+            'Meta': {'object_name': 'FundingOrganization'},
+            'cost': ('django.db.models.fields.FloatField', [], {}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'measure': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.Measure']"}),
+            'organization': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.Organization']"})
+        },
+        'lizard_krw.goalscore': {
+            'Meta': {'ordering': "('start_date', 'waterbody', 'category')", 'object_name': 'GoalScore'},
+            'category': ('django.db.models.fields.IntegerField', [], {}),
+            'end_date': ('django.db.models.fields.DateTimeField', [], {}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'owner': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['auth.User']"}),
+            'start_date': ('django.db.models.fields.DateTimeField', [], {}),
+            'value': ('django.db.models.fields.FloatField', [], {}),
+            'waterbody': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.WaterBody']"})
+        },
+        'lizard_krw.krwwatertype': {
+            'Meta': {'object_name': 'KRWWaterType'},
+            'code': ('django.db.models.fields.CharField', [], {'max_length': '8'}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '80'})
+        },
+        'lizard_krw.measure': {
+            'Meta': {'ordering': "('waterbody', 'name')", 'object_name': 'Measure'},
+            'aggregation_type': ('django.db.models.fields.IntegerField', [], {'default': '1'}),
+            'category': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.MeasureCategory']"}),
+            'code': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.MeasureCode']"}),
+            'description': ('django.db.models.fields.CharField', [], {'max_length': '200', 'null': 'True', 'blank': 'True'}),
+            'executive': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.Executive']"}),
+            'exploitation_costs': ('django.db.models.fields.IntegerField', [], {'null': 'True', 'blank': 'True'}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'identity': ('django.db.models.fields.CharField', [], {'max_length': '80', 'null': 'True', 'blank': 'True'}),
+            'investment_costs': ('django.db.models.fields.IntegerField', [], {'null': 'True', 'blank': 'True'}),
+            'is_indicator': ('django.db.models.fields.BooleanField', [], {'default': 'False'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '200'}),
+            'owner': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['auth.User']"}),
+            'parent': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.Measure']", 'null': 'True', 'blank': 'True'}),
+            'period': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.MeasurePeriod']", 'null': 'True', 'blank': 'True'}),
+            'status': ('django.db.models.fields.related.ManyToManyField', [], {'to': "orm['lizard_krw.MeasureStatus']", 'through': "orm['lizard_krw.MeasureStatusMoment']", 'symmetrical': 'False'}),
+            'total_costs': ('django.db.models.fields.IntegerField', [], {'null': 'True', 'blank': 'True'}),
+            'unit': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.Unit']"}),
+            'value': ('django.db.models.fields.FloatField', [], {}),
+            'waterbody': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.WaterBody']"})
+        },
+        'lizard_krw.measurecategory': {
+            'Meta': {'object_name': 'MeasureCategory'},
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '200'})
+        },
+        'lizard_krw.measurecode': {
+            'Meta': {'ordering': "('code',)", 'object_name': 'MeasureCode'},
+            'code': ('django.db.models.fields.CharField', [], {'max_length': '80'}),
+            'description': ('django.db.models.fields.TextField', [], {}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'})
+        },
+        'lizard_krw.measureperiod': {
+            'Meta': {'ordering': "('start_date', 'end_date')", 'object_name': 'MeasurePeriod'},
+            'description': ('django.db.models.fields.TextField', [], {'null': 'True', 'blank': 'True'}),
+            'end_date': ('django.db.models.fields.DateField', [], {}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'start_date': ('django.db.models.fields.DateField', [], {})
+        },
+        'lizard_krw.measurestatus': {
+            'Meta': {'ordering': "('-value',)", 'object_name': 'MeasureStatus'},
+            'color': ('lizard_map.models.ColorField', [], {'max_length': '8'}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '200'}),
+            'value': ('django.db.models.fields.FloatField', [], {'default': '0.0'})
+        },
+        'lizard_krw.measurestatusmoment': {
+            'Meta': {'ordering': "('datetime',)", 'object_name': 'MeasureStatusMoment'},
+            'datetime': ('django.db.models.fields.DateField', [], {}),
+            'description': ('django.db.models.fields.TextField', [], {'null': 'True', 'blank': 'True'}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'is_planning': ('django.db.models.fields.BooleanField', [], {'default': 'False'}),
+            'measure': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.Measure']"}),
+            'status': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.MeasureStatus']"})
+        },
+        'lizard_krw.municipality': {
+            'Meta': {'object_name': 'Municipality'},
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '200'})
+        },
+        'lizard_krw.organization': {
+            'Meta': {'ordering': "('name',)", 'object_name': 'Organization'},
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '200'})
+        },
+        'lizard_krw.province': {
+            'Meta': {'object_name': 'Province'},
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '200'})
+        },
+        'lizard_krw.score': {
+            'Meta': {'ordering': "('start_date', 'waterbody', 'category')", 'object_name': 'Score'},
+            'category': ('django.db.models.fields.IntegerField', [], {}),
+            'end_date': ('django.db.models.fields.DateTimeField', [], {}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'owner': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['auth.User']"}),
+            'start_date': ('django.db.models.fields.DateTimeField', [], {}),
+            'value': ('django.db.models.fields.FloatField', [], {}),
+            'waterbody': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.WaterBody']"})
+        },
+        'lizard_krw.singleindicator': {
+            'Meta': {'object_name': 'SingleIndicator'},
+            'boundary_value': ('django.db.models.fields.FloatField', [], {'null': 'True', 'blank': 'True'}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'target_value': ('django.db.models.fields.FloatField', [], {'null': 'True', 'blank': 'True'}),
+            'timeserie_id': ('django.db.models.fields.IntegerField', [], {}),
+            'water_body': ('django.db.models.fields.related.ForeignKey', [], {'related_name': "'indicators'", 'to': "orm['lizard_krw.WaterBody']"}),
+            'y_max': ('django.db.models.fields.FloatField', [], {'null': 'True', 'blank': 'True'}),
+            'y_min': ('django.db.models.fields.FloatField', [], {'null': 'True', 'blank': 'True'})
+        },
+        'lizard_krw.unit': {
+            'Meta': {'object_name': 'Unit'},
+            'description': ('django.db.models.fields.TextField', [], {'null': 'True', 'blank': 'True'}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'sign': ('django.db.models.fields.CharField', [], {'max_length': '20'})
+        },
+        'lizard_krw.waterbody': {
+            'Meta': {'ordering': "('name',)", 'object_name': 'WaterBody'},
+            'area': ('django.db.models.fields.related.ManyToManyField', [], {'symmetrical': 'False', 'to': "orm['lizard_krw.Area']", 'null': 'True', 'blank': 'True'}),
+            'characteristics': ('django.db.models.fields.TextField', [], {'null': 'True', 'blank': 'True'}),
+            'code': ('django.db.models.fields.CharField', [], {'max_length': '80', 'null': 'True', 'blank': 'True'}),
+            'control_parameters': ('django.db.models.fields.TextField', [], {'null': 'True', 'blank': 'True'}),
+            'current_situation_chemicals': ('django.db.models.fields.TextField', [], {'null': 'True', 'blank': 'True'}),
+            'description': ('django.db.models.fields.TextField', [], {'null': 'True', 'blank': 'True'}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'ident': ('django.db.models.fields.CharField', [], {'max_length': '80'}),
+            'municipality': ('django.db.models.fields.related.ManyToManyField', [], {'symmetrical': 'False', 'to': "orm['lizard_krw.Municipality']", 'null': 'True', 'blank': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '80'}),
+            'protected_area_reason': ('django.db.models.fields.TextField', [], {'null': 'True', 'blank': 'True'}),
+            'province': ('django.db.models.fields.related.ManyToManyField', [], {'symmetrical': 'False', 'to': "orm['lizard_krw.Province']", 'null': 'True', 'blank': 'True'}),
+            'slug': ('django.db.models.fields.SlugField', [], {'max_length': '50', 'db_index': 'True'}),
+            'status': ('django.db.models.fields.TextField', [], {'null': 'True', 'blank': 'True'}),
+            'water_type': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['lizard_krw.KRWWaterType']", 'null': 'True', 'blank': 'True'})
+        },
+        'lizard_krw.xmlimport': {
+            'Meta': {'object_name': 'XMLImport'},
+            'created_on': ('django.db.models.fields.DateTimeField', [], {'auto_now_add': 'True', 'blank': 'True'}),
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'import_category': ('django.db.models.fields.IntegerField', [], {}),
+            'owner': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['auth.User']", 'null': 'True', 'blank': 'True'}),
+            'updated_on': ('django.db.models.fields.DateTimeField', [], {'auto_now': 'True', 'blank': 'True'}),
+            'xml_file': ('django.db.models.fields.files.FileField', [], {'max_length': '100'})
+        },
+        'lizard_krw.xmlimportmeetobject': {
+            'Meta': {'object_name': 'XMLImportMeetobject'},
+            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '255'}),
+            'waterbodies': ('django.db.models.fields.related.ManyToManyField', [], {'to': "orm['lizard_krw.WaterBody']", 'symmetrical': 'False'})
+        }
+    }
+
+    complete_apps = ['lizard_krw']
