@@ -30,12 +30,12 @@
   <h2>
     Info
     <span class="ss_sprite ss_calendar_view_day sidebarbox-action-icon popup-trigger"
-          rel="#summary-datepicker">&nbsp;</span>
+          rel="#summary-datepicker">Datumkeuze</span>
   </h2>
   <div>
     {% date_popup %}
     <dl>
-      <dt>Naam</dt>
+      <dt>Naam waterlichaam</dt>
       <dd>{{ water_body.name }}</dd>
 
       {% if water_body.description %}
